--- a/jupyter_notebooks/00_test_imports.ipynb
+++ b/jupyter_notebooks/00_test_imports.ipynb
@@ -155,7 +155,7 @@
       "numpy               : 1.26.0\n",
       "pytz                : 2023.3.post1\n",
       "dateutil            : 2.8.2\n",
-      "setuptools          : 65.5.0\n",
+      "setuptools          : 68.2.2\n",
       "pip                 : 23.2.1\n",
       "Cython              : None\n",
       "pytest              : None\n",
@@ -175,7 +175,7 @@
       "bottleneck          : None\n",
       "dataframe-api-compat: None\n",
       "fastparquet         : None\n",
-      "fsspec              : None\n",
+      "fsspec              : 2023.9.1\n",
       "gcsfs               : None\n",
       "matplotlib          : 3.8.0\n",
       "numba               : None\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -340,14 +340,95 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading collection 'popular'\n",
+      "[nltk_data]    | \n",
+      "[nltk_data]    | Downloading package cmudict to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\cmudict.zip.\n",
+      "[nltk_data]    | Downloading package gazetteers to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\gazetteers.zip.\n",
+      "[nltk_data]    | Downloading package genesis to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\genesis.zip.\n",
+      "[nltk_data]    | Downloading package gutenberg to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\gutenberg.zip.\n",
+      "[nltk_data]    | Downloading package inaugural to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\inaugural.zip.\n",
+      "[nltk_data]    | Downloading package movie_reviews to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\movie_reviews.zip.\n",
+      "[nltk_data]    | Downloading package names to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\names.zip.\n",
+      "[nltk_data]    | Downloading package shakespeare to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\shakespeare.zip.\n",
+      "[nltk_data]    | Downloading package stopwords to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\stopwords.zip.\n",
+      "[nltk_data]    | Downloading package treebank to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\treebank.zip.\n",
+      "[nltk_data]    | Downloading package twitter_samples to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\twitter_samples.zip.\n",
+      "[nltk_data]    | Downloading package omw to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    | Downloading package omw-1.4 to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet2021 to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet31 to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet_ic to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\wordnet_ic.zip.\n",
+      "[nltk_data]    | Downloading package words to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping corpora\\words.zip.\n",
+      "[nltk_data]    | Downloading package maxent_ne_chunker to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping chunkers\\maxent_ne_chunker.zip.\n",
+      "[nltk_data]    | Downloading package punkt to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping tokenizers\\punkt.zip.\n",
+      "[nltk_data]    | Downloading package snowball_data to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    | Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]    |     C:\\Users\\yhutter\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]    |   Unzipping taggers\\averaged_perceptron_tagger.zip.\n",
+      "[nltk_data]    | \n",
+      "[nltk_data]  Done downloading collection popular\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nltk.download('popular')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -369,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
