Fihis word recognition german 03.

--- a/jupyter_notebooks/04_vorverarbeitung.ipynb
+++ b/jupyter_notebooks/04_vorverarbeitung.ipynb
@@ -32,6 +32,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "1a9a02ad-7596-48d2-9a68-348c19d0f28d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package europarl_raw to\n",
+      "[nltk_data]     /home/yhutter/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/europarl_raw.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('europarl_raw')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "68b84f9802f7476b",
    "metadata": {
@@ -227,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "655db7df5445b536",
    "metadata": {
     "collapsed": false,
@@ -286,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2a8d81a645c73057",
    "metadata": {
     "collapsed": false,
@@ -317,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "786eb252f1b48ff3",
    "metadata": {
     "collapsed": false,
@@ -337,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "ad41af5fc19348c",
    "metadata": {
     "collapsed": false,
@@ -356,7 +387,7 @@
        " 'Heute möchte ich Sie bitten - das ist auch der Wunsch einiger Kolleginnen und Kollegen - , allen Opfern der Stürme , insbesondere in den verschiedenen Ländern der Europäischen Union , in einer Schweigeminute zu gedenken .']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "914bc597b534eed4",
    "metadata": {
     "collapsed": false,
@@ -386,7 +417,7 @@
        " 'Heute möchte ich Sie bitten - das ist auch der Wunsch einiger Kolleginnen und Kollegen - , allen Opfern der Stürme , insbesondere in den verschiedenen Ländern der Europäischen Union , in einer Schweigeminute zu gedenken .']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "29edc319cf3bf8a2",
    "metadata": {
     "collapsed": false,
@@ -431,7 +462,7 @@
        " 'Summit has 4,608 servers, which reportedly take up the size of two tennis courts.']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "c29774a3498691c5",
    "metadata": {
     "collapsed": false,
@@ -485,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a292ba8b581faa06",
    "metadata": {
     "collapsed": false,
@@ -565,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "1db7c33c5ad5bb81",
    "metadata": {
     "collapsed": false,
@@ -592,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "52b7f8052389a3e7",
    "metadata": {
     "collapsed": false,
@@ -610,7 +641,7 @@
        " Summit has 4,608 servers, which reportedly take up the size of two tennis courts.]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "d15aac4303dd2dc7",
    "metadata": {
     "collapsed": false,
@@ -672,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "39e90e84bb22122e",
    "metadata": {
     "collapsed": false,
@@ -711,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "cc442e94c187a657",
    "metadata": {
     "collapsed": false,
@@ -726,7 +757,7 @@
        "'Some Accented text'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "a5f3901696d9eb14",
    "metadata": {
     "collapsed": false,
@@ -758,7 +789,7 @@
        "'ausserlich, auerlich, uberhaupt, offentlich'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "b142ccbc2565f040",
    "metadata": {
     "collapsed": false,
@@ -834,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "f9afd3e294968c2d",
    "metadata": {
     "collapsed": false,
@@ -849,7 +880,7 @@
        "'You all cannot expand contractions I would think'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "4c0858d8e8ed1b2f",
    "metadata": {
     "collapsed": false,
@@ -875,7 +906,7 @@
        "'Are not are not good you would think.'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "3c7713971c28c7ca",
    "metadata": {
     "collapsed": false,
@@ -914,7 +945,7 @@
        "'Well this was fun What do you think '"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "18ca983608024ef4",
    "metadata": {
     "collapsed": false,
@@ -1031,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "c183077daf3c1c18",
    "metadata": {
     "collapsed": false,
@@ -1092,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "3a433cf61b67158c",
    "metadata": {
     "collapsed": false,
@@ -1120,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "bdc447056b7a4e95",
    "metadata": {
     "collapsed": false,
@@ -1135,7 +1166,7 @@
        "'My school is really amazing'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "7b4a6345f23ca475",
    "metadata": {
     "collapsed": false,
@@ -1163,7 +1194,7 @@
        "'Halo ? Wie jetzt ?'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
